k8s/index_svc.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: nodejs-k8s
spec:
  replicas: 3
  selector:
    matchLabels:
      role: nodejs-k8s
  template:
    metadata:
      labels:
        role: nodejs-k8s
    spec:
      containers:
        - name: nodejs-k8s
          image: lucabecci/node-k8s
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-k8s
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    role: nodejs-k8s
