k8s/ingress_svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-k8s-loadbalancer
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-k8s
            port:
              number: 8080
